--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1241,12 +1241,14 @@ body.light-theme {
       scale:90%
    }
 
-   .work__card {
-      padding: 1.25rem;
-   }
-
    .work__img {
       margin-bottom: 1rem;
+      width: 100%;
+   }
+
+   /* Forced CSS due to small img size*/
+   .evera__img, .genai__img, .git__img, .quiz__img{
+      margin-bottom: 3.5rem;
    }
 
    .work__title {
