--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -800,6 +800,10 @@ body.light-theme {
    border-radius: 1rem;
    margin-bottom: .75rem;
 }
+.work__img:hover {
+   transform: scale(1.05);
+   transition: .4s;
+}
 
 .work__title {
    font-size: var(--normal-font-size);
